--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@angular/cli": "~9.0.0-next.8",
     "@angular/compiler-cli": "~9.0.0-next.9",
     "@angular/language-service": "~9.0.0-next.9",
-    "@types/node": "~8.9.4",
+    "@angular/localize": "^9.0.0-next.5",
     "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
