--- a/angular.json
+++ b/angular.json
@@ -1,11 +1,15 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
+  "version": 1, 
   "newProjectRoot": "projects",
   "projects": {
-    "ivy-app": {
+    "ivy-i18n-attributes": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -13,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ivy-app",
+            "outputPath": "dist/ivy-i18n-attributes",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,7 +28,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -62,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ivy-app:build"
+            "browserTarget": "ivy-i18n-attributes:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ivy-app:build:production"
+              "browserTarget": "ivy-i18n-attributes:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ivy-app:build"
+            "browserTarget": "ivy-i18n-attributes:build"
           }
         },
         "test": {
@@ -88,7 +92,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
@@ -110,15 +114,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ivy-app:serve"
+            "devServerTarget": "ivy-i18n-attributes:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ivy-app:serve:production"
+              "devServerTarget": "ivy-i18n-attributes:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "ivy-app"
+  "defaultProject": "ivy-i18n-attributes"
 }
